# claude-code

./: .env.example  .eslintrc.js  .gitignore  .markdownlint.json  .mcp.json  .prettierrc  .vale.ini  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Invoke-WorktreeManager.ps1  PR_ANALYSIS.md  README.md  SECURITY.md  SUPPORT.md  claude-code.code-workspace  deck-refresh-changelog.md  package-lock.json  package.json  scratch.md  tsconfig.json  useful-claude-resources.md  warner-claude-code-july-2026.pptx  warner-claude-code-may-2026.pptx  warner-claude-code.pptx  ~$warner-claude-code.pptx
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md  topics
data/: CLAUDE.md  api_handlers_legacy.js  auth_module_messy.py  context_analysis_sample.js  data_pipeline_legacy.py  legacy_payment_processor.py  mcp_memory_sample.json  python_memory.json  sample_pr_diff.json
demos/: MCP_RUNBOOK.md  mcp-server-demo-punchlist.md  segment_1_zero_punchlist.md  segment_2_context_punchlist.md  segment_3_agents_punchlist.md  segment_4_hero_punchlist.md
docs/: FASTMCP3_UPGRADE_ASSESSMENT.md  RESOURCES.md  (+4 more)
segment_2_mcp/memory_server/: README.md  pyproject.toml  server.py
src/: .env.example  README.md  api_utils.py  copilot_tips_server.py  mcp-architecture.html  mcp-diagram.mmd  memory_server.py  pyproject.toml  run_memory_server.py  setup.ps1  setup.sh  start_inspector.py  test_memory_server.py
src/.claude/: .mcp.json
src/data/: memory_items.json
src/hello-world-mcp-server/: .gitignore  README.md  requirements.txt  server.py
src/utils/: client.ts  logger.ts
(+203 files in other folders)
