[project]
name = "memory-server"
version = "1.0.0"
description = "MCP memory server — persist conversation context to local JSON"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
memory-server = "server:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
